# onnx_tensorrt_ros

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
data/: .gitignore  coco.xml  convert_from_darknet_vision_info.py
include/onnx_tensorrt_ros/: nodelet.h
launch/: onnx_tensorrt_ros.launch  yolov3.launch
src/node/: standalone_nodelet_exec.cpp.in
src/nodelet/: nodelet.cpp  onnx_tensorrt_ros_nodelet.cpp  onnx_tensorrt_yolov3_nodelet.cpp
